Revert "docs: address Copilot review feedback on PR #25"
This reverts commit 5dd540fbbb6d4eced4511ea89d6ace9773ec7aaf.

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -53,7 +53,7 @@ Authorization: Bearer YOUR_API_TOKEN
 
 ## Understanding Different IDs
 
-QA.tech uses **prefixed short IDs** for most API resources. The prefix indicates the resource type. Some fields (e.g., dependency test case IDs in Create Test Case and Rerun endpoints) still use UUIDs and are documented on their respective pages:
+QA.tech uses **prefixed short IDs** for all API resources. The prefix indicates the resource type:
 
 | ID Type                    | Format                     | Where to Find                          | Used In API                                 | Example           |
 | -------------------------- | -------------------------- | -------------------------------------- | ------------------------------------------- | ----------------- |
