--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -214,16 +214,16 @@ Preview environments are **automatically created** when you call the [Start Run 
 
 ```json
 {
-  "testPlanShortId": "pln_abc123",
-  "applications": [
-    {
-      "applicationShortId": "app_frontend",
+  "integrationName": "GitHub Actions",
+  "testPlanShortId": "abc123",
+  "applications": {
+    "frontend-app": {
       "environment": {
         "url": "https://pr-123-frontend.vercel.app",
         "name": "PR-123-Frontend"
       }
     }
-  ]
+  }
 }
 ```
 
@@ -269,15 +269,14 @@ Test plans allow you to configure which environment and device preset to use per
 
 ```json
 {
-  "testPlanShortId": "pln_abc123",
-  "applications": [
-    {
-      "applicationShortId": "app_frontend",
+  "testPlanShortId": "abc123",
+  "applications": {
+    "frontend-app": {
       "environment": {
         "url": "https://preview.example.com"
       }
     }
-  ]
+  }
 }
 ```
 
@@ -312,8 +311,8 @@ When using the [Start Run API](/api-reference/start-run) to override environment
 
 | ID Type | Where to Find | What It's Used For |
 |---------|---------------|-------------------|
-| Application Short ID | Settings -> Applications (column or dropdown menu) | `applicationShortId` in `applications` array |
-| Environment Short ID | Settings -> Applications -> [App] -> Environments (above name) | `environment.shortId` field |
+| Application Short ID | Settings -> Applications (column or dropdown menu) | Key in `applications` object |
+| Environment Short ID | Settings -> Applications -> [App] -> Environments (above name) | `environment.short_id` field |
 
 For detailed steps, see [Understanding Different IDs](/api-reference/introduction#understanding-different-ids).
 
