--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -272,7 +272,7 @@ Test plans allow you to configure which environment and device preset to use per
   "testPlanShortId": "pln_abc123",
   "applications": [
     {
-      "applicationShortId": "app_frontend",
+      "applicationShortId": "app_abc123",
       "environment": {
         "url": "https://preview.example.com"
       }
