--- a/core-concepts/applications-and-environments.mdx
+++ b/core-concepts/applications-and-environments.mdx
@@ -217,7 +217,7 @@ Preview environments are **automatically created** when you call the [Start Run 
   "testPlanShortId": "pln_abc123",
   "applications": [
     {
-      "applicationShortId": "app_frontend",
+      "applicationShortId": "app_abc123",
       "environment": {
         "url": "https://pr-123-frontend.vercel.app",
         "name": "PR-123-Frontend"
